--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,8 +30,10 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t tariksaid/docker-graphql:0.0.2 .
+        docker build -t tariksaid/docker-graphql:latest .
 
     - name: Push Docker Image
       run: |
         docker push tariksaid/docker-graphql:0.0.2
+        docker push tariksaid/docker-graphql:latest
         
