--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  build:0
 
     runs-on: ubuntu-latest
 
@@ -18,22 +18,30 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Git Semantic Version
+      uses: PaulHatch/semantic-version@v4.0.3
+      with:
+        major_pattern: "major:"
+        minor_pattern: "feature:"
+        format: "${major}.${minor}.${patch}-prereleases${increment}"
+      id: version
+            
     - name: Docker Login
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
-        echo "Iniciando login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "Fin del login"
+        echo "New version: $NEW_VERSION!!!!!"
 
-    - name: Build Docker Image
-      run: |
-        docker build -t tariksaid/docker-graphql:0.0.2 .
-        docker build -t tariksaid/docker-graphql:latest .
+    # - name: Build Docker Image
+    #   run: |
+    #     docker build -t tariksaid/docker-graphql:0.0.2 .
+    #     docker build -t tariksaid/docker-graphql:latest .
 
-    - name: Push Docker Image
-      run: |
-        docker push tariksaid/docker-graphql:0.0.2
-        docker push tariksaid/docker-graphql:latest
+    # - name: Push Docker Image
+    #   run: |
+    #     docker push tariksaid/docker-graphql:0.0.2
+    #     docker push tariksaid/docker-graphql:latest
         
