--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,18 +28,20 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "New version: $NEW_VERSION!!!!!"
 
-    # - name: Build Docker Image
-    #   run: |
-    #     docker build -t tariksaid/docker-graphql:0.0.2 .
-    #     docker build -t tariksaid/docker-graphql:latest .
+    - name: Build Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker build -t tariksaid/docker-graphql:$NEW_VERSION.
+        docker build -t tariksaid/docker-graphql:latest .
 
-    # - name: Push Docker Image
-    #   run: |
-    #     docker push tariksaid/docker-graphql:0.0.2
-    #     docker push tariksaid/docker-graphql:latest
+    - name: Push Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker push tariksaid/docker-graphql:$NEW_VERSION
+        docker push tariksaid/docker-graphql:latest
         
